make submodules track master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "libs/FrostCore"]
 	path = libs/FrostCore
 	url = https://github.com/FrostlessNetwork/FrostCore.git
+	branch = master
 [submodule "libs/BukkitAPI"]
 	path = libs/BukkitAPI
 	url = https://github.com/FrostlessNetwork/BukkitAPI.git
+	branch = master
